# yejichaxun

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: analyze.py  ocr.py  rag.py  report.py  tasks.py  upload.py  ws_tasks.py
backend/app/core/: task_state.py
backend/app/core/agent/: analyzer.py  zhipu_llm.py
backend/app/core/realtime/: task_stream.py
backend/app/core/tools/: __init__.py  data_preprocessor.py  document_analyzer.py  ocr_tool.py  rag_runtime.py  rag_system.py
backend/app/db/: __init__.py  init_db.py  models.py  session.py
backend/app/db/repositories/: __init__.py  result_repo.py  task_event_repo.py  task_repo.py
backend/docs/: ocr_installation_guide.md
backend/tests/: conftest.py  test_analyzer_scored_count.py  test_p0_api.py
docker/: Dockerfile  docker-compose.yml
docs/: runbook-v0.1-beta.md  task-state-machine.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorComponent.jsx  FileUpload.jsx  FileUpload.test.jsx  HistoryPanel.jsx  HistoryPanel.test.jsx  Loading.jsx  ResultDisplay.jsx
frontend/src/constants/: taskState.js
scripts/: rag_rebuild_weekly.ps1  rag_switch_slot.ps1
tasks/: lessons.md  query_flow_guide.md  todo.md
