[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yejichaxun-backend"
version = "1.0.0"
description = "业绩匹配Agent后端服务"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
    "websockets==12.0",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "pdfplumber==0.10.0",
    "python-docx==1.1.0",
    "pillow==10.1.0",
    "tqdm==4.66.1",
    "aiofiles==23.2.1",
    "requests==2.31.0",
    "lxml==4.9.3",
    "beautifulsoup4==4.12.2",
    "pymupdf==1.23.8",
    "opencv-python==4.8.1.78",
    "pytesseract==0.3.10",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scikit-learn==1.3.2",
    "tensorflow==2.15.0",
    "torch==2.1.0",
    "transformers==4.35.2",
    "sentence-transformers==2.2.2",
    "langchain==0.1.6",
    "chromadb==0.4.15",
    "redis==5.0.1",
    "celery==5.3.4",
    "flower==2.0.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "pytest-testmon==1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "pytest-testmon==1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["app/core/agent/memory.py"]